crates/hwpx/tests/snapshots/header_tests__border_fill_list_tests__border_fill_list_single.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: list
---
borderFill:
  - "@id": 1
    "@threeD": false
    "@shadow": false
    "@breakCellSeparateLine": false
"@itemCnt": 1
